// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SearchBar /> SearchBar - inverse theme 1`] = `
<div
  className="searchbar searchbar-inverse"
>
  <form
    className="searchbar-form"
    onSubmit={[Function]}
  >
    <input
      autoFocus={true}
      className="searchbar-input form-control"
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder="Search"
      type="text"
      value=""
    />
    <i
      className="fa fa-search"
    />
    
  </form>
</div>
`;

exports[`<SearchBar /> SearchBar - with one additional button 1`] = `
<div
  className="searchbar"
>
  <form
    className="searchbar-form"
    onSubmit={[Function]}
  >
    <input
      autoFocus={true}
      className="searchbar-input form-control"
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder="Search"
      type="text"
      value=""
    />
    <i
      className="fa fa-search"
    />
    
  </form>
  <div
    className="searchbar-actions"
  >
    <button
      className="btn btn-default"
    >
      Submit
    </button>
  </div>
</div>
`;

exports[`<SearchBar /> SearchBar - with two additional buttons 1`] = `
<div
  className="searchbar"
>
  <form
    className="searchbar-form"
    onSubmit={[Function]}
  >
    <input
      autoFocus={true}
      className="searchbar-input form-control"
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder="Search"
      type="text"
      value=""
    />
    <i
      className="fa fa-search"
    />
    
  </form>
  <div
    className="searchbar-actions"
  >
    <button
      className="btn btn-primary"
    >
      Submit
    </button>
    <button
      className="btn btn-default"
    >
      Reset
    </button>
  </div>
</div>
`;

exports[`<SearchBar /> SearchBar 1`] = `
<div
  className="searchbar"
>
  <form
    className="searchbar-form"
    onSubmit={[Function]}
  >
    <input
      autoFocus={true}
      className="searchbar-input form-control"
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder="Search"
      type="text"
      value=""
    />
    <i
      className="fa fa-search"
    />
    
  </form>
</div>
`;
